Opened 10 years ago

Closed 10 years ago

#11865 closed bug (fixed)

Some app buttons on Deskbar not listing windows

Reported by: jstressman Owned by: jscipione
Priority: normal Milestone: R1
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Tracker correctly lists open windows when you click its icon on the Deskbar. But Icon-O-Matic and Terminal for example only show "No windows". (Same for ActivityMonitor, CharacterMap, etc.)

hrev48818 here.

Attachments (1)

screenshot60.png (667.1 KB ) - added by jstressman 10 years ago.
horizontal deskbar, app buttons showing "no windows" despite open windows.

Download all attachments as: .zip

Change History (7)

comment:1 by jstressman, 10 years ago

I should mention that I'm using the Deskbar in horizontal mode.

Attaching a screenshot to illustrate my situation.

by jstressman, 10 years ago

Attachment: screenshot60.png added

horizontal deskbar, app buttons showing "no windows" despite open windows.

comment:2 by waddlesplash, 10 years ago

Component: - GeneralApplications/Deskbar
Owner: changed from nobody to jscipione
Status: newassigned

comment:3 by jstressman, 10 years ago

I've made a video to show the behavior for better understanding.

https://www.youtube.com/watch?v=xGkTfbaXyvY

By default it works fine (confirmed by deleting ~/config/deskbar and rebooting). But if you change your settings to what I have in my screenshot above (first 4 boxes under Deskbar preferences -> Applications checked), and then drag your Deskbar down to horizontal mode, then you'll see this bug behavior.

comment:4 by jstressman, 10 years ago

I've actually done some more debugging and narrowed this down a bit further.

https://www.youtube.com/watch?v=stwXF6R486M

I've tested the latest nightly builds available on download.haiku-os.org and it doesn't show up there (hrev48786), but does show up in my own builds of hrev48818 and hrev48819. I've done clean builds on both of those, running a script to clean out build tools and building and installing the latest jam, and deleting and recreating generated.x86gcc2 before configuring and building.

I've even done a totally clean install of hrev48819 to confirm it's not some cruft settings I have sitting around from earlier installs on my main install, and I can still reliably recreate this exact behavior.

Further, the single setting that needs to be changed to enable this behavior is the "Expand New Applications" option under Deskbar Preferences → Applications. Just checking "Show Application Expander" doesn't do it. You have to check both that and "Expand New Applications" under it (which can only be done in vertical Deskbar mode).

Then you drag the Deskbar to horizontal and should see this behavior.

This second video shows it working before the option is enabled, even in horizontal mode... then not working after it's enabled... and how you can "fix" for already opened windows by just making the Deskbar vertical for a moment to populate the window lists. Then they will stay working until you close and reopen the app.

The only other debugging I can think to do at this point would be to do a binary search with git or something and try to figure out which check-in specifically broke it.

comment:5 by jstressman, 10 years ago

I forgot to mention, Twitcher (holding down ctrl-~ or ctrl-tab) still works correctly and lets you move between and select hidden windows, even when the window list on Deskbar shows "No windows" for an app.

comment:6 by jscipione, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev48828

Note: See TracTickets for help on using tickets.