Deskbar: Fix window updating bug #11865

We must toggle the expanded state of new windows if we are in
VERTICAL expando mode with Expand New Teams on.

The vertical part of the check got dropped accidentally in hrev48817

Thanks jstressman for reporting.

Fixes #11865